# frameGL

./: CMakeLists.txt  index.html  params.json
images/: README
include/: bmp.h  frame.h  frame.inl  mathtools.h  meshtools.h  normalize.h  primitives.h  texture.h  tools.h  vbObject.h  vbObject.inl
models/: README
src/: bmp.cpp  frame.cpp  meshtools.cpp  normalize.cpp  primitives.cpp  texture.cpp  tools.cpp  vbObject.cpp
